--- a/开发文档.md
+++ b/开发文档.md
@@ -55,7 +55,7 @@ PL 身份的角色会在卡片展示、Loot分配等页面出现
 ## 主控制台页面
 该页面是总数据展示页面，展示：DM，每个PL的角色，总gp收入等等
 
-## 角色数据页面
+## 总数据页面
 该页面是由表格和角色数据组成的页面，该页面主要用于录入和预览数据。
 该页面的所有数据都可以手动编辑，也可以使用其他方式自动登记。
 这个页面可以录入的数据：
